--- a/reports/ASIANPAINT_report.html
+++ b/reports/ASIANPAINT_report.html
@@ -294,7 +294,7 @@
 <li>Asian Paints has undertaken significant capacity expansions: Khandala plant increased from 300,000 KL to 400,000 KL per annum (₹385 crores investment) and Kasna plant from 80,000 KL to 100,000 KL per annum (₹124.7 crores investment)</li>
 <li>A new greenfield facility in Madhya Pradesh with 400,000 KL annual capacity is planned for completion by 2028</li>
 <li>The company maintains a consistent dividend payout (₹32.40 per share in past 12 months, yielding 1.43%)</li>
-<li>These expansions demonstrate management's confidence in meeting medium-term demand growth despite current industry headwinds</li>
+<li><strong>💡 Key Takeaway</strong> - These expansions demonstrate management's confidence in meeting medium-term demand growth despite current industry headwinds</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -303,7 +303,7 @@
 <li>Financial fundamentals remain strong with industry-leading ROE (23.48%) and consistent dividend payouts (1.45% yield), though recent quarterly performance shows concerning trends</li>
 <li>Technical indicators suggest continued bearish pressure with price trading below key moving averages, though improving RSI from oversold levels may present tactical opportunities</li>
 <li>Premium valuation metrics (P/E of 50.5, P/B of 11.86) appear disconnected from current performance challenges, suggesting market may be pricing in faster recovery than financials currently support</li>
-<li>Significant capacity expansion investments signal management confidence in long-term industry growth driven by urbanization and infrastructure development</li>
+<li><strong>💡 Key Takeaway</strong> - Significant capacity expansion investments signal management confidence in long-term industry growth driven by urbanization and infrastructure development</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
