--- a/reports/BAJAJ-AUTO_report.html
+++ b/reports/BAJAJ-AUTO_report.html
@@ -293,7 +293,7 @@
 <li>Bajaj Auto recently executed a significant share buyback program, demonstrating commitment to enhancing shareholder value</li>
 <li>Company has made strategic investment to expand operations into Brazil, pursuing growth opportunities in international markets</li>
 <li>Launch of new electric three-wheeler brand "Bajaj GoGo" and strategic technology leadership appointments position company for EV transition</li>
-<li>These initiatives reflect long-term growth strategy focused on international diversification and leadership in the EV transformation</li>
+<li><strong>💡 Key Takeaway</strong> - These initiatives reflect long-term growth strategy focused on international diversification and leadership in the EV transformation</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -302,7 +302,7 @@
 <li>Technical picture remains bearish with continued downtrend, but approaching oversold conditions may present potential opportunity</li>
 <li>Company's strategic initiatives in EV development and international expansion position it well for long-term industry transformation</li>
 <li>Current risk-reward ratio favors cautious approach in short term while monitoring for stabilization signals and sales growth recovery</li>
-<li>Premium valuation despite recent price correction suggests market still pricing in long-term growth potential despite near-term challenges</li>
+<li><strong>💡 Key Takeaway</strong> - Premium valuation despite recent price correction suggests market still pricing in long-term growth potential despite near-term challenges</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
