--- a/reports/BEL_report.html
+++ b/reports/BEL_report.html
@@ -299,7 +299,7 @@
 <li>Substantial order inflows, including ₹561 crore secured as of January 2025</li>
 <li>Current order book for FY25 stands at ₹10,362 crore, enhancing revenue visibility</li>
 <li>Recent focus on AI-powered technologies and defense sector collaborations expands market opportunities</li>
-<li>These developments strengthen BEL's market position and provide a foundation for sustained future growth</li>
+<li><strong>💡 Key Takeaway</strong> - These developments strengthen BEL's market position and provide a foundation for sustained future growth</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -308,7 +308,7 @@
 <li>Current valuation (PE 41.00) suggests a premium pricing compared to some competitors, requiring continued growth execution</li>
 <li>Technical indicators show improving momentum with potential bullish reversal forming</li>
 <li>Strong institutional ownership and consistent promoter holding reflect market confidence</li>
-<li>Expanding order book and strategic focus on defense electronics align well with India's growing defense budget and self-reliance initiatives</li>
+<li><strong>💡 Key Takeaway</strong> - Expanding order book and strategic focus on defense electronics align well with India's growing defense budget and self-reliance initiatives</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
