--- a/reports/BHEL_report.html
+++ b/reports/BHEL_report.html
@@ -48,7 +48,6 @@
 </li>
 </ul>
 <p>Above mentioned personality investors might take new positions or hold on/add more to their existing holdings, while other personalities might consider exiting or staying away.</p>
-<p>Checkout the full list of popular personalities to know who you are and where you fit in!! <link to personalities page></p>
 <hr />
 <h2>Stock Snapshot 📊 - A Sneak Peak:</h2>
 <ul>
@@ -280,7 +279,6 @@
 </tr>
 </tbody>
 </table>
-<p><chart image to be inserted here></p>
 <ul>
 <li><strong>💡 Key Takeaway</strong> - The bearish technical setup with prices below key moving averages and decreasing volume suggests continued downward pressure</li>
 </ul>
@@ -296,7 +294,7 @@
 <li>BHEL is actively diversifying its business portfolio to reduce dependence on coal-based projects</li>
 <li>The company's strategy to expand into high-growth sectors has led to the industry segment contributing 40% to total order bookings</li>
 <li>Notable success in the defense sector shows promising diversification efforts</li>
-<li>For FY 2022-23, BHEL secured orders worth ₹23,548 crore across power, industry, and export segments, resulting in a substantial order book exceeding ₹91,336 crore</li>
+<li><strong>💡 Key Takeaway</strong> - For FY 2022-23, BHEL secured orders worth ₹23,548 crore across power, industry, and export segments, resulting in a substantial order book exceeding ₹91,336 crore</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -305,7 +303,7 @@
 <li>The stock appears fundamentally overvalued with a trailing P/E of 129.75, significantly higher than sector peers</li>
 <li>Technical indicators show bearish momentum with the stock trading below key moving averages and declining trading volumes</li>
 <li>While the company maintains a dominant market position and is securing large orders, operational inefficiencies are preventing these advantages from translating to shareholder returns</li>
-<li>Diversification efforts and strong order book provide potential catalysts for future turnaround, but significant improvement in financial metrics is needed first</li>
+<li><strong>💡 Key Takeaway</strong> - Diversification efforts and strong order book provide potential catalysts for future turnaround, but significant improvement in financial metrics is needed first</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
