--- a/reports/CGPOWER_report.html
+++ b/reports/CGPOWER_report.html
@@ -287,7 +287,7 @@
 <li>CG Power is investing ₹27 crore to expand power transformer capacity by 5,000 MVA</li>
 <li>Plans to raise up to ₹3,500 crore through a Qualified Institutional Placement to fund growth initiatives</li>
 <li>The company has established a subsidiary in the USA, indicating global expansion ambitions</li>
-<li>These strategic moves position the company to capitalize on growing transformer demand and strengthen its financial foundation for future growth opportunities</li>
+<li><strong>💡 Key Takeaway</strong> - These strategic moves position the company to capitalize on growing transformer demand and strengthen its financial foundation for future growth opportunities</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -296,7 +296,7 @@
 <li>Premium valuation (98x P/E) suggests market has already priced in significant growth expectations</li>
 <li>Strategic initiatives including power transformer capacity expansion and entry into semiconductor manufacturing provide growth visibility</li>
 <li>Technical picture shows potential bottoming pattern but requires confirmation through key resistance levels</li>
-<li>Investors should weigh the strong operational performance against valuation concerns when considering position sizing</li>
+<li><strong>💡 Key Takeaway</strong> - Investors should weigh the strong operational performance against valuation concerns when considering position sizing</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
