--- a/reports/HAL_report.html
+++ b/reports/HAL_report.html
@@ -49,7 +49,6 @@
 </li>
 </ul>
 <p>Above mentioned personality investors might take new positions or hold on/add more to their existing holdings, while other personalities might consider exiting or staying away.</p>
-<p>Checkout the full list of popular personalities to know who you are and where you fit in!! <link to personalities page></p>
 <hr />
 <h2>Stock Snapshot 📊 - A Sneak Peak:</h2>
 <ul>
@@ -269,7 +268,6 @@
 </tr>
 </tbody>
 </table>
-<p><chart image to be inserted here></p>
 <ul>
 <li><strong>💡 Key Takeaway</strong> - HAL's price remains in a downtrend below key moving averages, but improving RSI and narrowing MACD gap suggest potential bottoming process beginning</li>
 </ul>
@@ -285,7 +283,7 @@
 <li>HAL has secured significant defense orders, including a major contract for Su-30MKI fighter jets worth ₹13,500 crore</li>
 <li>The company has expanded manufacturing capacity and increased its authorized share capital to support growth initiatives</li>
 <li>HAL is pursuing partnerships with global aerospace leaders for indigenous jet engine development, enhancing technological self-reliance</li>
-<li>These strategic moves strengthen HAL's market position while diversifying revenue streams beyond traditional defense contracts</li>
+<li><strong>💡 Key Takeaway</strong> - These strategic moves strengthen HAL's market position while diversifying revenue streams beyond traditional defense contracts</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -293,7 +291,7 @@
 <li>HAL maintains exceptional financial strength with minimal debt and growing profitability despite a challenging market environment</li>
 <li>Technical indicators suggest the stock remains in a downtrend but is showing early signs of potential stabilization</li>
 <li>Long-term growth prospects are supported by India's expanding defense budget and HAL's strategic position, though increased private sector competition poses challenges</li>
-<li>The 13.83% yearly stock price increase significantly underperforms sector peers despite solid fundamentals, suggesting potential for relative valuation improvement</li>
+<li><strong>💡 Key Takeaway</strong> - The 13.83% yearly stock price increase significantly underperforms sector peers despite solid fundamentals, suggesting potential for relative valuation improvement</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
