--- a/reports/HDFCBANK_report.html
+++ b/reports/HDFCBANK_report.html
@@ -296,7 +296,7 @@
 <li>HDFC Bank is expanding its loan securitization business to meet increasing investor demand and optimize its balance sheet</li>
 <li>This strategic move enhances liquidity management capabilities and supports future loan growth objectives</li>
 <li>Upcoming IPO of subsidiary HDB Financial Services aims to raise substantial capital, strengthening the group's financial services portfolio</li>
-<li>These initiatives demonstrate management's focused approach toward business expansion and capital optimization</li>
+<li><strong>💡 Key Takeaway</strong> - These initiatives demonstrate management's focused approach toward business expansion and capital optimization</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -305,7 +305,7 @@
 <li>Post-merger integration with HDFC Limited has created temporary headwinds but strengthens long-term competitive positioning</li>
 <li>Stock appears potentially undervalued based on multiple valuation models despite trading at premium to some peers</li>
 <li>Technical indicators show consolidation phase with potential accumulation, requiring monitoring of key support/resistance levels</li>
-<li>Conservative investors may find attractive entry point given strong fundamentals and dividend yield, while traders should watch for technical breakout confirmation</li>
+<li><strong>💡 Key Takeaway</strong> - Conservative investors may find attractive entry point given strong fundamentals and dividend yield, while traders should watch for technical breakout confirmation</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
