--- a/reports/HINDUNILVR_report.html
+++ b/reports/HINDUNILVR_report.html
@@ -294,7 +294,7 @@
 <ul>
 <li>HUL has recently undertaken a significant corporate action by demerging its ice-cream business into a separate listed entity</li>
 <li>This strategic move aims to allow HUL to concentrate on its core product lines, potentially enhancing operational efficiency</li>
-<li>While immediate effect may be a minor reduction in consolidated revenues (ice-cream segment accounts for 3% of total revenue), long-term benefits could include more focused business strategy and better resource allocation</li>
+<li><strong>💡 Key Takeaway</strong> - While immediate effect may be a minor reduction in consolidated revenues (ice-cream segment accounts for 3% of total revenue), long-term benefits could include more focused business strategy and better resource allocation</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -303,7 +303,7 @@
 <li>Current technical picture remains bearish with prices trending below key moving averages and negative momentum</li>
 <li>Premium valuation persists despite price correction, indicating market's long-term confidence in business model</li>
 <li>Strategic corporate actions like ice-cream business demerger reflect management's focus on operational optimization</li>
-<li>Investors should watch for volume growth recovery and margin preservation in coming quarters as key performance indicators</li>
+<li><strong>💡 Key Takeaway</strong> - Investors should watch for volume growth recovery and margin preservation in coming quarters as key performance indicators</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
