--- a/reports/ITC_report.html
+++ b/reports/ITC_report.html
@@ -270,7 +270,7 @@
 <ul>
 <li>ITC's planned demerger of its hotel business into ITC Hotels Limited represents a significant corporate restructuring aimed at unlocking shareholder value.</li>
 <li>The company has been implementing its 'ITC Next' strategy, focusing on disruptive business models at the intersection of digitalization and sustainability.</li>
-<li>These strategic initiatives, coupled with continued innovation (nearly 300 new products launched in the past three years), demonstrate management's commitment to future-proofing the business against changing consumer preferences and regulatory challenges.</li>
+<li><strong>💡 Key Takeaway</strong> - These strategic initiatives, coupled with continued innovation (nearly 300 new products launched in the past three years), demonstrate management's commitment to future-proofing the business against changing consumer preferences and regulatory challenges.</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -278,7 +278,7 @@
 <li>ITC demonstrates strong financial fundamentals with consistent profitability, low debt, and attractive dividends, though revenue growth remains modest.</li>
 <li>The company's diversified business model provides stability, while strategic initiatives like the hotel business demerger and 'ITC Next' strategy position it for future growth.</li>
 <li>Technical indicators suggest a potential bottoming pattern with improving momentum, though confirmation of trend reversal requires sustained trading above current resistance levels.</li>
-<li>The stock offers particular appeal for dividend and defensive investors seeking stability and income in a volatile market environment.</li>
+<li><strong>💡 Key Takeaway</strong> - The stock offers particular appeal for dividend and defensive investors seeking stability and income in a volatile market environment.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
