--- a/reports/KOTAKBANK_report.html
+++ b/reports/KOTAKBANK_report.html
@@ -263,7 +263,7 @@
 <ul>
 <li>Kotak's acquisition of Standard Chartered Bank's personal loan business represents a strategic expansion into the unsecured lending market.</li>
 <li>This acquisition targets affluent customers and is expected to boost Kotak's market share in the retail lending segment.</li>
-<li>Successful integration will be crucial for realizing the full benefits of this acquisition, including enhanced interest income and expanded retail presence.</li>
+<li><strong>💡 Key Takeaway</strong> - Successful integration will be crucial for realizing the full benefits of this acquisition, including enhanced interest income and expanded retail presence.</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -272,7 +272,7 @@
 <li>The bank's high insider ownership (28.82%) signals management confidence, while institutional backing (46.02%) provides additional validation.</li>
 <li>Recent technical indicators suggest a bullish trend forming after February's pullback, with increasing volume indicating growing institutional interest.</li>
 <li>While revenue growth lags behind peers, strong earnings growth and management efficiency offset this concern.</li>
-<li>The recent acquisition of Standard Chartered's personal loan business should enhance Kotak's retail lending capabilities and market share.</li>
+<li><strong>💡 Key Takeaway</strong> - The recent acquisition of Standard Chartered's personal loan business should enhance Kotak's retail lending capabilities and market share.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
