--- a/reports/MARUTI_report.html
+++ b/reports/MARUTI_report.html
@@ -296,7 +296,7 @@
 <li>Maruti Suzuki is undertaking substantial capacity expansion with a ₹1.25 trillion investment to double production capacity to 4 million units annually by FY31</li>
 <li>Recent addition of an assembly line at the Manesar plant enhances short-term production capabilities</li>
 <li>Strategic collaboration with Toyota on electric vehicles accelerates technology adoption and reduces R&amp;D costs</li>
-<li>These initiatives position Maruti to maintain market leadership while adapting to changing consumer preferences toward SUVs and electric vehicles</li>
+<li><strong>💡 Key Takeaway</strong> - These initiatives position Maruti to maintain market leadership while adapting to changing consumer preferences toward SUVs and electric vehicles</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -305,7 +305,7 @@
 <li>Near-term technical weakness and valuation concerns present short-term headwinds despite long-term fundamental strength</li>
 <li>The company's proactive approach to EV transition balances maintaining combustion engine leadership while building future electric capabilities</li>
 <li>Minimal financial risk due to industry-leading low leverage provides stability during potential automotive sector volatility</li>
-<li>Significant capacity expansion plans demonstrate management confidence in long-term Indian automotive market growth prospects</li>
+<li><strong>💡 Key Takeaway</strong> - Significant capacity expansion plans demonstrate management confidence in long-term Indian automotive market growth prospects</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
