--- a/reports/NYKAA_report.html
+++ b/reports/NYKAA_report.html
@@ -293,7 +293,7 @@
 <ul>
 <li>The establishment of Nykaa Essentials Private Limited represents a strategic move to strengthen core business offerings</li>
 <li>No other significant corporate actions, business expansions, large order receipts, preferential issuances, or capacity expansions are evident in the available data</li>
-<li>The focus appears to be on organic growth through the existing business model rather than major transformative initiatives</li>
+<li><strong>💡 Key Takeaway</strong> - The focus appears to be on organic growth through the existing business model rather than major transformative initiatives</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -302,7 +302,7 @@
 <li>The extreme P/E ratio (914) suggests serious overvaluation concerns that could limit near-term upside potential</li>
 <li>Technical indicators point to bearish price action with the stock trading below key moving averages</li>
 <li>Stable promoter holdings and increasing domestic institutional interest provide foundational support</li>
-<li>The disconnect between business performance and stock valuation creates a "wait and watch" scenario for most investor types</li>
+<li><strong>💡 Key Takeaway</strong> - The disconnect between business performance and stock valuation creates a "wait and watch" scenario for most investor types</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
