--- a/reports/PAYTM_report.html
+++ b/reports/PAYTM_report.html
@@ -288,7 +288,7 @@
 <ul>
 <li>No traditional corporate actions like dividends, bonuses, stock splits, or rights issues have been observed recently.</li>
 <li>Paytm has been enhancing its service offerings by integrating UPI for seamless trading and partnering with AI platforms to improve user experience.</li>
-<li>These strategic initiatives could potentially strengthen Paytm's competitive position in the rapidly evolving digital payments landscape, but near-term impact remains uncertain.</li>
+<li><strong>💡 Key Takeaway</strong> - These strategic initiatives could potentially strengthen Paytm's competitive position in the rapidly evolving digital payments landscape, but near-term impact remains uncertain.</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -297,7 +297,7 @@
 <li>The regulatory challenge from the Enforcement Directorate adds uncertainty to an already volatile investment case.</li>
 <li>India's booming digital payments market presents significant growth opportunities, but Paytm needs to improve execution to capitalize on them.</li>
 <li>The stock carries high risk for both investors and traders, with technical indicators showing continued bearish momentum.</li>
-<li>Conservative investors should approach with caution while contrarians and high-risk seekers may find opportunity in potential turnaround.</li>
+<li><strong>💡 Key Takeaway</strong> - Conservative investors should approach with caution while contrarians and high-risk seekers may find opportunity in potential turnaround.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
