--- a/reports/SUZLON_report.html
+++ b/reports/SUZLON_report.html
@@ -295,7 +295,7 @@
 <li>Suzlon plans to add 1.5 GW manufacturing capacity by end of FY25, increasing total to approximately 4.5 GW</li>
 <li>Secured expansion of 204.75 MW with Jindal Renewables, contributing to order book exceeding 5.5 GW</li>
 <li>Capacity expansions position the company to meet growing demand and improve operational efficiency</li>
-<li>These developments strengthen market position and future revenue potential in the renewable energy sector</li>
+<li><strong>💡 Key Takeaway</strong> - These developments strengthen market position and future revenue potential in the renewable energy sector</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -305,7 +305,7 @@
 <li>Technical indicators show consolidation with potential bullish shift, but price remains below key moving averages</li>
 <li>Planned capacity expansion and growing order book provide solid foundation for future growth</li>
 <li>Institutional investor confidence increasing, reflecting positive sentiment toward company's prospects</li>
-<li>Company well-positioned to benefit from India's renewable energy growth but faces competitive and execution challenges</li>
+<li><strong>💡 Key Takeaway</strong> - Company well-positioned to benefit from India's renewable energy growth but faces competitive and execution challenges</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
