--- a/reports/SWIGGY_report.html
+++ b/reports/SWIGGY_report.html
@@ -291,7 +291,7 @@
 <li>Swiggy has allocated equity shares under its ESOP Plan 2021, showing efforts to retain talent and align employee interests with company performance.</li>
 <li>Significant investment in its supply chain subsidiary demonstrates commitment to strengthening quick-commerce operations, a high-growth segment.</li>
 <li>Expansion of warehouse capacities aims to improve delivery times and enhance customer satisfaction, particularly for the Instamart service.</li>
-<li>These strategic initiatives position Swiggy to strengthen its competitive positioning in the quick-commerce sector, which could be a key growth driver if executed effectively.</li>
+<li><strong>💡 Key Takeaway</strong> - These strategic initiatives position Swiggy to strengthen its competitive positioning in the quick-commerce sector, which could be a key growth driver if executed effectively.</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -300,7 +300,7 @@
 <li>The company's high debt ratio (14.738) coupled with ongoing losses creates significant financial risk that investors should carefully consider.</li>
 <li>Technical indicators show early signs of stabilization after a prolonged downtrend, though the overall trend remains bearish in the short term.</li>
 <li>Analyst sentiment remains surprisingly bullish despite financial challenges, with a consensus "buy" rating and target price offering 49% upside potential.</li>
-<li>Swiggy's future success depends on its ability to leverage its strong market position and favorable sector trends while addressing operational inefficiencies to achieve profitability.</li>
+<li><strong>💡 Key Takeaway</strong> - Swiggy's future success depends on its ability to leverage its strong market position and favorable sector trends while addressing operational inefficiencies to achieve profitability.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
