--- a/reports/TATAMOTORS_report.html
+++ b/reports/TATAMOTORS_report.html
@@ -294,7 +294,7 @@
 <li>Capital restructuring effective September 1, 2024, involving cancellation of 'A' Ordinary Shares and issuance of new Ordinary Shares</li>
 <li>Investing $1.5 billion in battery gigafactory in India, expected to start production by 2026</li>
 <li>Plans to more than double EV charging points to 400,000 within next two years</li>
-<li>These strategic moves indicate strong commitment to strengthening position in electric vehicle market despite recent setbacks</li>
+<li><strong>💡 Key Takeaway</strong> - These strategic moves indicate strong commitment to strengthening position in electric vehicle market despite recent setbacks</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -303,7 +303,7 @@
 <li>Stock appears significantly undervalued compared to peers but continues to underperform the market and sector</li>
 <li>Technical indicators show potential bottoming process but need confirmation through volume and price action</li>
 <li>Long-term success depends on navigating JLR's transition strategy and maintaining commercial vehicle segment dominance</li>
-<li>Risk-reward appears favorable for long-term investors but near-term volatility likely to persist</li>
+<li><strong>💡 Key Takeaway</strong> - Risk-reward appears favorable for long-term investors but near-term volatility likely to persist</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
