--- a/reports/YESBANK_report.html
+++ b/reports/YESBANK_report.html
@@ -279,7 +279,7 @@
 <ul>
 <li>Yes Bank is expanding its branch network and focusing on MSME initiatives through programs like 'YES Business'.</li>
 <li>Recent leadership changes may introduce operational uncertainties that could impact execution of strategic plans.</li>
-<li>These expansion efforts could enhance market presence but may take time to translate into improved financial performance.</li>
+<li><strong>💡 Key Takeaway</strong> - These expansion efforts could enhance market presence but may take time to translate into improved financial performance.</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -288,7 +288,7 @@
 <li>The stock's -31% performance over the past year reflects market concerns about the bank's competitive position.</li>
 <li>Technical indicators suggest continued bearish momentum with distribution pattern evident in volume data.</li>
 <li>High insider ownership contrasts with low institutional ownership and negative analyst sentiment.</li>
-<li>The bank faces an uphill battle to improve its operational efficiency and profitability metrics to justify a rerating.</li>
+<li><strong>💡 Key Takeaway</strong> - The bank faces an uphill battle to improve its operational efficiency and profitability metrics to justify a rerating.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
