--- a/reports/ZOMATO_report.html
+++ b/reports/ZOMATO_report.html
@@ -47,7 +47,6 @@
 </li>
 </ul>
 <p>Above mentioned personality investors might take new positions or hold on/add more to their existing holdings, while other personalities might consider exiting or staying away.</p>
-<p>Checkout the full list of popular personalities to know who you are and where you fit in!! <link to personalities page></p>
 <hr />
 <h2>Stock Snapshot 📊 - A Sneak Peak:</h2>
 <ul>
@@ -276,7 +275,6 @@
 </tr>
 </tbody>
 </table>
-<p><chart image to be inserted here></p>
 <ul>
 <li><strong>💡 Key Takeaway</strong> - The stock is in a clear downtrend with significant selling pressure, having declined from ₹288 levels. Technical indicators show continued weakness with no clear reversal signals yet.</li>
 </ul>
@@ -292,7 +290,7 @@
 <li>Zomato acquired Paytm's ticketing businesses for $244.2 million to strengthen its presence in online ticketing and diversify revenue streams.</li>
 <li>Rapidly expanding its quick commerce platform Blinkit by adding 152 new dark stores, demonstrating commitment to the quick commerce sector.</li>
 <li>Company announced rebranding to "Eternal" to reflect its expanding scope beyond food delivery.</li>
-<li>Discontinued the Intercity Legends service, showing willingness to optimize service offerings by phasing out less viable operations.</li>
+<li><strong>💡 Key Takeaway</strong> - Discontinued the Intercity Legends service, showing willingness to optimize service offerings by phasing out less viable operations.</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -301,7 +299,7 @@
 <li>The company's leadership position (58% market share) in India's rapidly growing food delivery market provides a solid foundation for future growth.</li>
 <li>Strategic diversification into quick commerce and ticketing through acquisitions positions Zomato well in the broader digital commerce ecosystem.</li>
 <li>Current technical weakness presents potential entry opportunities for long-term investors, though short-term traders should exercise caution.</li>
-<li>Regulatory challenges including antitrust investigations remain the biggest near-term risk to the company's business model.</li>
+<li><strong>💡 Key Takeaway</strong> - Regulatory challenges including antitrust investigations remain the biggest near-term risk to the company's business model.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
