--- a/reports/MAZDOCK_report.html
+++ b/reports/MAZDOCK_report.html
@@ -293,7 +293,7 @@
 <li>Recent stock split in December 2024 aimed at improving liquidity and accessibility for retail investors.</li>
 <li>Ambitious ₹5,000 Cr expansion plan including construction of India's largest floating dry dock.</li>
 <li>Planned capacity expansion expected to double shipbuilding capability within 4-5 years.</li>
-<li>These initiatives position the company to secure and execute larger naval projects, potentially driving future revenue growth.</li>
+<li><strong>💡 Key Takeaway</strong> - These initiatives position the company to secure and execute larger naval projects, potentially driving future revenue growth.</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -302,7 +302,7 @@
 <li>The company's sole contender status for a $5 billion submarine project and ambitious expansion plans create substantial growth runway.</li>
 <li>Technical indicators suggest a bullish recovery from recent pullback, with improving momentum metrics.</li>
 <li>Current valuation exceeds intrinsic value estimates, creating potential risk despite strong fundamentals.</li>
-<li>Investors should monitor upcoming project execution and valuation metrics when considering position sizing.</li>
+<li><strong>💡 Key Takeaway</strong> - Investors should monitor upcoming project execution and valuation metrics when considering position sizing.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
