--- a/reports/SBIN_report.html
+++ b/reports/SBIN_report.html
@@ -290,7 +290,7 @@
 <ul>
 <li>SBI announced plans to raise ₹50 billion through Basel III-compliant Tier-I perpetual bonds in February 2025</li>
 <li>This capital raise aims to strengthen the bank's capital base and support future growth initiatives</li>
-<li>Strategic focus on digital banking and fintech partnerships positions SBI for expansion in emerging financial technologies</li>
+<li><strong>💡 Key Takeaway</strong> - Strategic focus on digital banking and fintech partnerships positions SBI for expansion in emerging financial technologies</li>
 </ul>
 <hr />
 <h3>Conclusion 🧐</h3>
@@ -299,7 +299,7 @@
 <li>Strong technical recovery emerging but remains below key moving averages, requiring confirmation of trend reversal</li>
 <li>High promoter holding and increasing domestic institutional investment signal confidence in long-term prospects</li>
 <li>Strategic initiatives in technology and digital banking position SBI well for future growth in rapidly evolving financial landscape</li>
-<li>Attractive dividend yield offers steady income potential while waiting for potential valuation correction</li>
+<li><strong>💡 Key Takeaway</strong> - Attractive dividend yield offers steady income potential while waiting for potential valuation correction</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
